Project by company done ModelMapper needs to be more strict.